--- a/index.html
+++ b/index.html
@@ -37,7 +37,94 @@
 		<canvas id="_t3d"></canvas>
 		<canvas id="_f3d"></canvas>
 		<canvas id="_drawing"></canvas>
-		<canvas id="overlay" width="640" height="480"></canvas>
+		<div id="overlay"></div>
+		<div id="random">
+			<svg version="1.1" id="red" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="57.25px"
+				 height="49px" viewBox="0 0 57.25 49" enable-background="new 0 0 57.25 49" xml:space="preserve">
+					<g id="red">
+					</g>
+					<g id="Isolation_Mode">
+						<path fill="#FE1606" d="M55.53,18.484c-5.354-1.418-10.442-2.551-15.384-4.139c-4.487-1.441-7.069-4.653-7.659-9.523
+							c-0.134-1.108-1.649-2.93-2.451-2.89c-1.655,0.085-4.202,0.785-4.722,1.965c-2.511,5.69-7.068,8.228-12.716,9.405
+							c-2.819,0.587-5.674,1.056-8.536,1.372c-3.918,0.434-2.255,3.41-2.579,5.434c-0.369,2.292,0.993,2.853,3.03,2.941
+							c4.842,0.213,9.683,0.527,14.512,0.934c2.679,0.226,3.445,1.504,1.807,3.925c-3.717,5.493-8.523,9.335-15.372,9.644
+							c-3.499,0.16-4.589,1.742-4.175,4.938c0.162,1.251,0.208,2.519,0.373,4.638c5.624,0,10.969,0.004,16.313-0.002
+							c0.358-0.002,0.69,0.012,0.997,0.045c8.971-3.297,20.056-2.293,28.983-0.99c0.826,0.121,1.379,0.498,1.721,0.996
+							c1.782,0.276,4.021,1.121,4.28-2.248c0.254-3.299-0.37-5.477-4.452-6.198c-4.713-0.834-9.352-2.498-13.789-4.358
+							c-4.002-1.679-6.25-5.252-8.068-9.706c2.158,0,3.822-0.081,5.473,0.015c5.89,0.343,11.8,0.525,17.649,1.21
+							c3.59,0.42,4.793-0.878,4.631-4.204C55.342,20.547,55.487,19.396,55.53,18.484"/>
+					</g>
+			</svg>
+
+			<svg version="1.1" id="blue" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="57.25px"
+				 height="49px" viewBox="0 0 57.25 49" enable-background="new 0 0 57.25 49" xml:space="preserve">
+			<g id="blue">
+			</g>
+			<g id="Isolation_Mode">
+				<path fill="#1D2E91" d="M52.424,32.131c-16.708,0.749-32.062,1.437-47.335,2.12C2.925,18.533,14.442,4.959,29.292,5.256
+					c3.031,0.06,6.351,1.347,8.98,2.972C46.729,13.456,48.978,22.436,52.424,32.131"/>
+			</g>
+			</svg>
+
+			<svg version="1.1" id="yellow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="57.25px"
+				 height="49px" viewBox="0 0 57.25 49" enable-background="new 0 0 57.25 49" xml:space="preserve">
+			<g id="yellow">
+			</g>
+			<g id="Isolation_Mode">
+				<path fill="#F9A71C" d="M2.179,14.603c15.425-2.345,30.389-4.619,45.749-6.953c1.779,12.429,5.008,23.902,4.376,36.568
+					C34.519,35.939,16.625,28.975,2.179,14.603"/>
+			</g>
+			</svg>
+
+			<svg version="1.1" id="redDot" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="57.25px"
+				 height="49px" viewBox="0 0 57.25 49" enable-background="new 0 0 57.25 49" xml:space="preserve">
+			<g id="redDot">
+			</g>
+			<g id="Isolation_Mode">
+				<path fill="#FE1606" d="M23.597,16.336c3.757-1.492,8.153-0.412,10.512,2.592c2.637,3.356,2.781,7.429,0.379,10.722
+					c-1.481,2.028-2.467,2.042-4.844,0.992c-1.147-0.507-2.684-0.075-4.028-0.217c-0.545-0.057-1.128-0.416-1.557-0.793
+					c-1.375-1.212-2.558-2.683-4.055-3.703c-1.797-1.226-2.266-2.613-1.444-4.538C19.566,19.037,21.182,17.286,23.597,16.336"/>
+			</g>
+			</svg>
+
+			<svg version="1.1" id="pink" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="57.25px"
+				 height="49px" viewBox="0 0 57.25 49" enable-background="new 0 0 57.25 49" xml:space="preserve">
+			<g id="pink">
+			</g>
+			<g id="Isolation_Mode">
+				<path fill="#F875A9" d="M28.294,30.316c-4.355-0.619-8.762-1.019-13.051-1.927c-3.704-0.783-5.203-2.968-5.377-6.575
+					c-0.32-6.624,1.002-8.391,8.061-8.809c7.023-0.416,14.107-0.467,21.14-0.145c6.631,0.303,11.311,5.202,11.552,11.33
+					c0.02,0.5-0.804,1.507-0.954,1.46c-2.827-0.885-4.136,1.454-5.557,2.692c-2.027,1.77-4.262,2.159-6.667,2.167
+					c-3.029,0.01-6.063-0.312-9.096-0.491C28.328,30.119,28.311,30.218,28.294,30.316"/>
+			</g>
+			</svg>
+
+			<svg version="1.1" id="squiggly" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="79.25px"
+				 height="64.75px" viewBox="0 0 79.25 64.75" enable-background="new 0 0 79.25 64.75" xml:space="preserve">
+			<g id="squiggly">
+			</g>
+			<g id="Isolation_Mode">
+				<path fill="#1D2E91" d="M57.349,11.519c1.261-3.615,2.446-7.021,3.642-10.448c3.755,0.79,4.563,1.312,3.488,4.903
+					c-1.567,5.23,2.319,6.934,5.232,8.933c2.487,1.707,3.903,3.984,4.549,6.469c1,3.849,1.528,7.904,1.604,11.884
+					c0.076,3.989-5.525,8.712-9.52,8.565c-3.586-0.132-7.166-0.435-10.751-0.508c-2.327-0.048-4.424,0.545-6.15,2.414
+					c-4.489,4.857-9.115,9.588-13.769,14.454c1.427,0.79,3.209,1.779,5.178,2.87c-1.519,1.948-2.938,3.022-5.286,2.125
+					c-2.116-0.809-4.102-2.352-6.686-0.628c-0.587,0.392-2.439-1.112-3.888-1.832c0.55-0.99,0.923-1.662,1.013-1.824
+					c-2.409-3.962-4.505-7.619-6.838-11.117c-0.653-0.979-1.912-1.761-3.058-2.166c-2.685-0.947-5.488-1.55-8.206-2.41
+					c-1.869-0.591-4.808-4.859-4.496-6.764c0.136-0.835,0.997-1.845,1.792-2.223c2.214-1.052,5.448-1.203,6.604-2.872
+					c1.061-1.529-0.086-4.57-0.22-6.948c-0.341-6.071,0.278-11.911,3.546-17.292c1.459-2.402,3.277-3.349,5.959-2.795
+					c4.6,0.95,9.206,1.859,13.791,2.871c3.055,0.674,6.05,1.638,9.12,2.219C48.244,10.203,52.533,10.767,57.349,11.519 M57.212,17.086
+					c-7.95-1.643-15.149-3.108-22.339-4.624c-4.406-0.929-8.776-2.054-13.209-2.808C20.762,9.5,19.13,10.35,18.71,11.18
+					c-2.964,5.858-2.705,12.019-1.441,18.284c0.475,0,0.763,0.069,0.998-0.012c1.045-0.358,2.08-0.744,3.108-1.148
+					c7.28-2.86,14.589-5.537,22.378-1.83c0.826,0.394,1.86,1.293,1.971,2.074c0.355,2.507,0.322,5.07,0.441,7.668
+					C52.558,31.393,53.235,23.459,57.212,17.086 M53.683,36.226c2.311,0,4.056-0.056,5.794,0.016c1.745,0.073,3.557,0.017,5.217,0.467
+					c4.476,1.214,8.025-3.267,7.81-7.736c-0.242-5.022-2.379-8.364-6.351-10.983c-2.103-1.386-3.964-0.82-4.831,1.55
+					c-0.598,1.637-1.307,3.238-2.041,4.82C57.506,28.18,55.689,31.979,53.683,36.226 M40.984,30.204
+					c-8.393-1.664-15.389,1.638-23.18,5.689c1.691,1.681,2.953,4.02,4.281,4.059c4.541,0.13,9.156-0.246,13.647-1.002
+					C40.164,38.205,41.729,35.275,40.984,30.204 M26.765,50.726c2.371-1.853,4.486-3.504,7.015-5.479
+					c-3.567,0.184-6.497,0.334-9.882,0.508C24.917,47.523,25.751,48.971,26.765,50.726"/>
+			</g>
+			</svg>
+		</div>
 		<div id="_stats"></div>
 		<div id="_progressBar"></div>
 		<!-- <a href="http://www.tastenkunst.com" target="_blank">
